codacy/sonarqube issues refactoring